Delauney triangulation internals

--- a/examples/euclidean.ipynb
+++ b/examples/euclidean.ipynb
@@ -46,9 +46,10 @@
    "source": [
     "iFig = ip.InteractiveFigure()\n",
     "iAx = iFig.get_interactive_axes(0,0)\n",
-    "iAx.axes.set_xlim([10,11])\n",
-    "iAx.axes.set_ylim([10,11])\n",
+    "iAx.axes.set_xlim([0,1])\n",
+    "iAx.axes.set_ylim([0,1])\n",
     "iAx.axes.set_aspect('equal')\n",
+    "iAx.plot([0,1,1,0,0],[0,0,1,1,0], '-b', linewidth=2)\n",
     "tpc = iAx.triplot()"
    ]
   },
@@ -61,8 +62,11 @@
    "source": [
     "n_batch_points = 5\n",
     "while True:\n",
-    "    tr.add_points(np.random.random((n_batch_points, 2))+10)\n",
-    "    tpc.plot(tr.points[:,0], tr.points[:,1], tr.simplices)\n",
+    "    tr.add_points(np.random.random((n_batch_points, 2)))\n",
+    "    simplices = tr.simplices\n",
+    "    if simplices is None:\n",
+    "        continue\n",
+    "    tpc.plot(tr.points[:,0], tr.points[:,1], simplices)\n",
     "    iFig.render(0.1)"
    ]
   }
