--- a/examples/torus.ipynb
+++ b/examples/torus.ipynb
@@ -46,9 +46,10 @@
    "source": [
     "iFig = ip.InteractiveFigure()\n",
     "iAx = iFig.get_interactive_axes(0,0)\n",
-    "iAx.axes.set_xlim([-0.1,1.1])\n",
-    "iAx.axes.set_ylim([-0.1,1.1])\n",
+    "iAx.axes.set_xlim([-0.25,1.25])\n",
+    "iAx.axes.set_ylim([-0.25,1.25])\n",
     "iAx.axes.set_aspect('equal')\n",
+    "iAx.plot([0,1,1,0,0],[0,0,1,1,0], '-b', linewidth=2)\n",
     "tpc = iAx.triplot()"
    ]
   },
@@ -62,11 +63,8 @@
     "n_batch_points = 5\n",
     "while True:\n",
     "    tr.add_points(np.random.random((n_batch_points, 2)))\n",
-    "    all_simplices = tr.simplices\n",
-    "    positive_simplices = [np.max(np.abs(tr.points[simplex[1]] - tr.points[simplex[0]])) < 0.8 and \n",
-    "                          np.max(np.abs(tr.points[simplex[2]] - tr.points[simplex[0]])) < 0.8\n",
-    "                          for simplex in all_simplices]\n",
-    "    tpc.plot(tr.points[:,0], tr.points[:,1], all_simplices[positive_simplices])\n",
+    "    points = np.vstack((np.zeros(2),space.points(tr.coordinates[1:])))\n",
+    "    tpc.plot(points[:,0], points[:,1], tr.faces)\n",
     "    iFig.render(0.1)\n"
    ]
   }
